--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-spinners-kit": "^1.9.1",
     "resend": "^4.0.1-alpha.0",
