--- a/package.json
+++ b/package.json
@@ -37,14 +37,20 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "file-loader": "^6.2.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "url-loader": "^4.1.1",
+    "vite": "^5.4.10",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
